fix hover not showing

--- a/src/fullctl/django/static/common/v2/app.css
+++ b/src/fullctl/django/static/common/v2/app.css
@@ -769,7 +769,7 @@ div.menu .button {
   visibility: hidden;
 }
 
-.list-table tr:hover .options [data-hover="show"] {
+.list-table tr:hover [data-hover="show"] {
   visibility: visible;
 }
 
